[metadata]
name = iAnnotateSV
version = attr: src.VERSION
description = The module helps to annotate structural variants called using NGS on human.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = structural, variants, NGS, MSK-IMPACT
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Development Status :: 3
