[metadata]
name = iAnnotateSV
version = attr: src.VERSION
description = The module helps to annotate structural variants called using NGS on human.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = structural, variants, NGS, MSK-IMPACT, MSK-ACCESS
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Development Status :: 5 - Production/Stable

[bumpversion]
current_version = 1.2.0
commit = True
tag = True

[bumpversion:file:iAnnotateSV/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = nosetests

[tool:nosetests]
collect_ignore = ['setup.py']
